--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 dist: xenial      # to use stable Python 3.7
+
 language: python
+
+cache: pip  # cache pip packages, we're not shipping code,
+            # only care about dependencies being installed
+
 python:
   - "3.7"
+
 script:
   - pytest -v
