Add 2 more Python talks + 'external' pytest mark

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,5 @@ ignore_missing_imports = True
 
 [tool:pytest]
 addopts = --doctest-modules -p pytest_asyncio
+markers =
+    external: marks tests as connecting to external services (deselect with '-m "not external"')
