--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 aiodns >=2.0
 aiohttp >=3.5.4
-black >= 19.3b0
+black >=19.3b0
+lxml >=4.3.3
 mistune >=0.8.4, <0.9
-mypy >= 0.701
+mypy >=0.701
 pytest >=4.4.2
 pytest-asyncio >=0.10
