--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial      # to use stable Python 3.7
+dist: bionic
 
 language: python
 
@@ -6,7 +6,7 @@ cache: pip  # cache pip packages, we're not shipping code,
             # only care about dependencies being installed
 
 python:
-  - "3.7"
+  - "3.8"
 
 script:
   - black --check ci/
