--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,6 +2,6 @@ pre-commit:
     parallel: true
     commands:
         black:
-            run: black .
+            run: black --check ci/
         mypy:
             run: mypy ci/
