--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,8 @@ ignore_missing_imports = True
 addopts = --doctest-modules -p pytest_asyncio
 markers =
     external: marks tests as connecting to external services (deselect with '-m "not external"')
+
+[flake8]
+# add to default ignores
+extend_ignore =
+    E501   # line too long (> 79 characters) -- we rely on Black to do the formatting
