--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,25 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+
+    - name: Cache dependencies
+      uses: actions/cache@v1
+      env:
+        cache-name: cache-pip-requirements
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ env.cache-name }}-${{ hashFiles('**/requirements.txt') }}
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
         python-version: "3.8"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Test
       run: |
         pytest -v ci/
