--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    schedule:
+    - cron:  '* * * * */6'
+
     steps:
     - uses: actions/checkout@v2
 
