--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron:  '* * * * */6'
+    - cron:  '0 20 * * *'    # every day at 20:00 UTC
 
 jobs:
   test:
