--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiodns >=2.0
+aiodns >=2.0.0
 aiohttp >=3.6.2
 black >=19.10b0
 flake8 >=3.7.9
@@ -7,4 +7,5 @@ lxml >=4.5.0
 mistune >=0.8.4, <0.9
 mypy >=0.770
 pytest >=5.4.1
-pytest-asyncio >=0.10
+pytest-asyncio >=0.11.0
+xdoctest >=0.12.0
