--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [tool:pytest]
-addopts = --doctest-modules -p pytest_asyncio
+addopts = --xdoctest -p pytest_asyncio
 markers =
     external: marks tests as connecting to external services (deselect with '-m "not external"')
 
