Improve poetry caching in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       env:
         cache-name: cache-poetry-requirements
       with:
-        path: ~/.poetry
+        path: ~/.cache
         key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/poetry.lock') }}
         restore-keys: |
           ${{ runner.os }}-${{ env.cache-name }}-
