Improve poetry caching in CI (#4)
* Improve poetry caching in CI

* Don't use poetry virtualenv

* Use well-defined virtualenv for faster caching

* Change cache name to force-regenerate cache on CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v1
       env:
-        cache-name: cache-poetry-requirements
+        cache-name: cache-venv-pip-poetry
       with:
-        path: ~/.poetry
+        path: ~/.cache
         key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/poetry.lock') }}
         restore-keys: |
           ${{ runner.os }}-${{ env.cache-name }}-
