--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,19 +9,30 @@ on:
     - cron:  '0 20 * * *'    # every day at 20:00 UTC
 
 jobs:
-  test-links-valid:
+  checkout:
     runs-on: ubuntu-latest
     container:
+      image: alpine/git:latest
+      volumes:
+        - repo:/repo
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+  test-links-valid:
+    runs-on: ubuntu-latest
+    needs: checkout
+    container:
       image: lycheeverse/lychee:latest
+      volumes:
+        - repo:/repo
       env:
         GITHUB_TOKEN: $LYCHEE_GITHUB_TOKEN
 
     steps:
-    - uses: actions/checkout@v2
-
     - name: Check external links using lychee
       run: |
-        lychee --progress --verbose README.md
+        lychee --progress --verbose /repo/README.md
 
   test-links-sorted:
     runs-on: ubuntu-latest
