--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     steps:
     - name: Check external links using lychee
       run: |
-        ./lychee --progress --verbose /repo/README.md
+        /usr/src/lychee/lychee --progress --verbose /repo/README.md
 
   test-links-sorted:
     runs-on: ubuntu-latest
