--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,30 +9,21 @@ on:
     - cron:  '0 20 * * *'    # every day at 20:00 UTC
 
 jobs:
-  checkout:
-    runs-on: ubuntu-latest
-    container:
-      image: alpine/git:latest
-      volumes:
-        - repo:/repo
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
   test-links-valid:
     runs-on: ubuntu-latest
     needs: checkout
     container:
       image: lycheeverse/lychee:latest
-      volumes:
-        - repo:/repo
+      options: --user 0
       env:
         GITHUB_TOKEN: $LYCHEE_GITHUB_TOKEN
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Check external links using lychee
       run: |
-        /usr/src/lychee/lychee --progress --verbose /repo/README.md
+        /usr/src/lychee/lychee --progress --verbose README.md
 
   test-links-sorted:
     runs-on: ubuntu-latest
