--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Check external links using lychee
       run: |
-        /usr/src/lychee/lychee --verbose README.md
+        /usr/src/lychee/lychee --verbose --timeout 45 README.md
 
   test-links-sorted:
     runs-on: ubuntu-latest
