--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,16 @@ description = ""
 authors = ["Paweł Romanowski <pawroman@pawroman.dev>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-black = "^20.08b1"
+python = "^3.9"
+black = "^22.1.0"
 flake8 = "^3.8"
 isort = "^5.4"
-lxml = "^4.5"
+lxml = "^4.6"
 mistune = "^0.8.4"
-mypy = "^0.790"
-pytest = "^6.1"
-pytest-asyncio = "^0.14"
-xdoctest = "^0.15"
+mypy = "^0.910"
+pytest = "^7.0"
+pytest-asyncio = "^0.18.1"
+xdoctest = "^0.15.10"
 httpx = "^0.16"
 brotlipy = "^0.7"
 
@@ -26,6 +26,16 @@ addopts = "--xdoctest -p pytest_asyncio"
 markers = [
     "external: marks tests as connecting to external services (deselect with '-m \"not external\"')"
 ]
+
+[tool.mypy]
+check_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = [
+    "lxml",
+    "mistune"
+]
+ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry>=0.12"]
